# PPC-LLM

./: .gitignore  README.md  requirements.txt
.devcontainer/: devcontainer.json
langchain-agent/: agent.py  app.py  requirements.txt
langchain-agent/app_pages/: AgentChat.py  Settings.py
langchain-agent/data/: ppc_table.xlsx
marketing_llm/: README.md  pyproject.toml  report.md
marketing_llm/src/marketing_llm/: app.py  crew.py  main.py
marketing_llm/src/marketing_llm/config/: agents.yaml  tasks.yaml
marketing_llm/src/marketing_llm/db/96a9bf8b-77b4-427c-ab32-76ec3eaa41c5/: index_metadata.pickle
marketing_llm/src/marketing_llm/knowledge/: Pro PPC Filters and Tasks.xlsx - Lucky Trading.csv  llm_knowledge.csv
